--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
 ServerDefaultMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
-GlobalDefaultGameMode=/Script/NoTimeToExplain.NoTimeToExplainGameMode
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_GameModeBase.BP_GameModeBase_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
